--- a/server/package.json
+++ b/server/package.json
@@ -3,5 +3,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
   }
 }
