--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "cypress": "^9.2.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.0",
