--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "cypress": "^9.2.1",
     "eslint-plugin-cypress": "^2.12.1",
+    "file-saver": "^2.0.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.0",
