--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "pg": "^8.7.1"
+    "fs": "^0.0.1-security",
+    "pg": "^8.7.1",
+    "pg-copy-streams": "^6.0.2"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
