--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,17 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
+    "jest": "^27.4.7",
     "pg": "^8.7.1",
-    "pg-copy-streams": "^6.0.2"
+    "pg-copy-streams": "^6.0.2",
+    "supertest": "^6.2.2"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
